<resources>
    <string name="app_name">Ian\'s Udacity Nanodegree</string>

    <string name="my_title">My Nanodegree Apps!</string>
    <string name="media_streamer">Spotify Streamer</string>
    <string name="scores_app">Scores App</string>
    <string name="library_app">Library App</string>
    <string name="build_it_bigger">Build it Bigger</string>
    <string name="bacon_reader">Bacon Reader</string>
    <string name="capstone">Capstone: My Own App</string>
    <string name="action_settings">Settings</string>
</resources>
