<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView android:text="@string/my_title" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="20dp"
        android:typeface="normal"
        android:id="@+id/textView" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/media_streamer"
        android:id="@+id/button_project1"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:minWidth="200dp"
        android:background="#F08C35"
        android:textColor="#ffffff"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scores_app"
        android:id="@+id/button_project2"
        android:layout_marginTop="7dp"
        android:minWidth="200dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/button_project1"
        android:background="#F08C35"
        android:textColor="#ffffff"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/library_app"
        android:id="@+id/button_project3"
        android:layout_below="@+id/button_project2"
        android:layout_marginTop="7dp"
        android:layout_centerHorizontal="true"
        android:minWidth="200dp"
        android:background="#F08C35"
        android:textColor="#ffffff"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:text="@string/build_it_bigger"
        android:id="@+id/button_project4"
        android:layout_below="@+id/button_project3"
        android:layout_centerHorizontal="true"
        android:minWidth="200dp"
        android:background="#F08C35"
        android:textColor="#ffffff"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:text="@string/bacon_reader"
        android:id="@+id/button_project5"
        android:layout_below="@+id/button_project4"
        android:layout_centerHorizontal="true"
        android:minWidth="200dp"
        android:background="#F08C35"
        android:textColor="#ffffff"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:text="@string/capstone"
        android:id="@+id/button_project6"
        android:minWidth="200dp"
        android:layout_below="@+id/button_project5"
        android:layout_centerHorizontal="true"
        android:background="#f0426f"
        android:textColor="#ffffff"
        />

</RelativeLayout>
